# dashboard-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/: config.py  main.py  ui.py
src/api/: __init__.py  base.py  dashboard.py  files.py  messages.py
src/schemas/: __init__.py  granularity_enum.py  order_enum.py  query.py  responses.py
src/views/: __init__.py  category_detail.py  messages.py  overview.py  upload.py
