[project]
name = "dashboard-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.52.1",
]

[tool.ruff]
exclude = [".git", ".venv", ".vscode", "__pypackages__", "venv"]

line-length = 102
indent-width = 2


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

indent-style = "space"
